[gd_scene load_steps=7 format=3 uid="uid://ooiph862dgbi"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_oqx7u"]
[ext_resource type="AudioStream" uid="uid://84ejp1q7ssnm" path="res://Assets/score.wav" id="1_tnux3"]
[ext_resource type="AudioStream" uid="uid://cm2irnujugm10" path="res://Assets/died.wav" id="2_xchbn"]
[ext_resource type="AudioStream" uid="uid://dwtdtkxi7lqwt" path="res://Assets/jump.wav" id="3_5utue"]
[ext_resource type="Texture2D" uid="uid://bwa0vkt7nknoe" path="res://Assets/bird.png" id="5_pvv8j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8f6qk"]
size = Vector2(23, 17)

[node name="Player" type="Area2D"]
scale = Vector2(2, 2)
script = ExtResource("1_oqx7u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_8f6qk")

[node name="DeadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xchbn")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5utue")

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_tnux3")
volume_db = -0.545

[node name="Bird" type="Sprite2D" parent="."]
texture = ExtResource("5_pvv8j")
